--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="#" />
+    <link rel="icon" href="./public/X5Case.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>X5Case</title>
   </head>
